--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ ul {
   padding: 0;
 }
 li,
-h3 {
+h1 {
   list-style: none;
 }
 input,
@@ -59,8 +59,8 @@ button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+h1,
+.new-task {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -86,7 +86,7 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for="new-task"] {
+.new-task {
   display: block;
   margin: 0 0 20px;
 }
