refactor: renamed the classes according to bem according to rules 2.1 in html-and-css-extended.md and to rule 3.1 in html-and-css.md refactor: change names classes and tags according to rules 3.2. Meaningful naming of identifiers and classes, 3.3. Keep the names of identifiers and classes concise, 3.4. Tag selectors

--- a/style.css
+++ b/style.css
@@ -4,49 +4,57 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.header__content {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.header__content .header__content--img {
   width: 100%;
 }
-.aaa .more_inf {
+.header__content .header__content--more_inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa { text-align: center;
+  .header__content { text-align: center;
   }
 }
-.centered-main-page-element {
+.content__wrapper {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.task,
+.label-task,
+.input-text {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+.task-field-group{
   display: flex;
 }
-ul {
+.content__todo__block,
+.content__completed__block {
   margin: 0;
   padding: 0;
 }
-li,
-h1 {
+.content__todo__block--item,
+.content__text {
   list-style: none;
 }
-input,
-button {
+.input-text,
+.checkbox,
+.add-button,
+.edit-button,
+.delete-button {
   outline: none;
 }
-button {
+.add-button,
+.edit-button,
+.delete-button {
   background: none;
   border: 0;
   color: #888;
@@ -55,12 +63,13 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.add-button,
+.edit-button,
+.delete-button :hover {
   color: #3a3a3a;
 }
 /* Heading */
-h1,
-.new-task {
+.content__text {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -69,7 +78,7 @@ h1,
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.input-text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -81,21 +90,21 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.input-text:focus {
   color: #333;
 }
 
 /* New Task */
-.new-task {
+.content__text {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.content__todo__block--item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -103,47 +112,49 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.content__todo__block--item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.content__todo__block--item > .input-checkbox {
   margin: 0 10px;
 }
-li > label {
+.content__todo__block--item > .label-task {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li > input[type="text"] {
+.content__todo__block--item > .input-text {
   width: 226px;
 }
-button.delete img {
+.delete-button,
+.delete-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.delete-button,
+.delete-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks .label-task {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+ul .content__todo__block--item .input-text {
   display: none;
 }
 
-ul li.editMode input[type=text] {
+ul .editMode .input-text {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+ul .editMode .label-task {
   display: none;
 }
